@@ -3,7 +3,7 @@
 \title{Create an RDS file for the 'Unique Peptides Database'}
 \usage{
 createUniquePeptideDbRds(fastaFile, outputFile = paste0(fastaFile, ".rds"),
-  missedCleavages = 0, PLGS = TRUE, IisL = TRUE, verbose = TRUE)
+  missedCleavages = 0, PLGS = TRUE, IisL = FALSE, verbose = TRUE)
 }
 \arguments{
   \item{fastaFile}{file path of the input fasta file}
@@ -19,10 +19,11 @@ createUniquePeptideDbRds(fastaFile, outputFile = paste0(fastaFile, ".rds"),
   from the \code{cleaver} package. See
   \code{\link{Synapter}} for references.}
 
-  \item{IisL}{If \code{TRUE} (default) Isoleucin and Leucin
-  are treated as equal. In this case sequences like "ABCI",
+  \item{IisL}{If \code{TRUE} Isoleucin and Leucin are
+  treated as identical. In this case sequences like "ABCI",
   "ABCL" are removed because they are not unqiue. If
-  \code{FALSE} "ABCI" and "ABCL" are reported as unique.}
+  \code{FALSE} (default) "ABCI" and "ABCL" are reported as
+  unique.}
 
   \item{verbose}{If \code{TRUE} a verbose output is
   provied.}
