@@ -5,7 +5,7 @@
 \usage{
 synergise(filenames, master = FALSE, object, outputdir, fdr = 0.01,
   fdrMethod = c("BH", "Bonferroni", "qval"), fpr = 0.01, peplen = 7,
-  missedCleavages = 0, PLGS = TRUE, IisL = TRUE, identppm = 20,
+  missedCleavages = 0, PLGS = TRUE, IisL = FALSE, identppm = 20,
   quantppm = 20, uniquepep = TRUE, span = 0.05, grid.ppm.from = 2,
   grid.ppm.to = 20, grid.ppm.by = 2, grid.nsd.from = 0.5,
   grid.nsd.to = 5, grid.nsd.by = 0.5, grid.subset = 1, grid.n = 0,
@@ -61,10 +61,11 @@ synergise(filenames, master = FALSE, object, outputdir, fdr = 0.01,
   from the \code{cleaver} package. See
   \code{\link{Synapter}} for references.}
 
-  \item{IisL}{If \code{TRUE} (default) Isoleucin and Leucin
-  are treated as equal. In this case sequences like "ABCI",
+  \item{IisL}{If \code{TRUE} Isoleucin and Leucin are
+  treated as equal. In this case sequences like "ABCI",
   "ABCL" are removed because they are not unqiue. If
-  \code{FALSE} "ABCI" and "ABCL" are reported as unique.}
+  \code{FALSE} (default) "ABCI" and "ABCL" are reported as
+  unique.}
 
   \item{identppm}{Identification mass tolerance (in ppm).
   Default is 20.}
