@@ -10,8 +10,9 @@ CHANGES IN VERSION 1.7.3
  o add createUniquePeptideDbRds (regards #55) [2014-04-29 Tue]
  o allow to use an RDS instead of a fasta file as 'Unique Peptides Database';
    closes #55 [2014-04-29 Tue]
- o treat I/L as same aminoacid in dbUniuqePeptideSet (new argument
-   IisL=TRUE); closes #60 [2014-04-30 Wed]
+ o introduce IisL argument to dbUniquePeptideSet which treats I/L as same
+   aminoacid if IisL == TRUE (default: IisL = FALSE);
+   closes #60 [2014-04-30 Wed]
 
 CHANGES IN VERSION 1.7.2
 ------------------------
